--- a/MvcIMO4/web.config
+++ b/MvcIMO4/web.config
@@ -10,10 +10,10 @@
   </connectionStrings>
   <appSettings>
     <add key="pagSize" value="2" />
-    <add key="SMTP" value="mail.dinispt.com" />
+    <add key="SMTP" value="mail.yourserver.com" />
     <add key="SMTP_AUTENTICATION" value="true" />
-    <add key="FROMEMAIL" value="pedro@dinispt.com" />
-    <add key="FROMPWD" value="ana1enfermeira" />
+    <add key="FROMEMAIL" value="pedro@yourserver.com" />
+    <add key="FROMPWD" value="password" />
     <add key="SMTP_SSL" value="false" />
   </appSettings>
   <system.web>
